--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -23,20 +23,14 @@
   </clr-vertical-nav-group>
   <clr-vertical-nav-group routerLinkActive="active">
     <cds-icon shape="flame" clrVerticalNavIcon></cds-icon>
-    Fire
+    Schießstand
     <clr-vertical-nav-group-children>
       <a
-        clrVerticalNavLink
-        routerLink="./fire/charmander"
-        routerLinkActive="active"
-        >Charmander</a
-      >
-      <a
-        clrVerticalNavLink
-        routerLink="./fire/charizard"
-        routerLinkActive="active"
-        >Charizard</a
-      >
+      clrVerticalNavLink
+      routerLink="./schuetze/contest/new"
+      routerLinkActive="active"
+      >Wettkämpfe</a
+    >
     </clr-vertical-nav-group-children>
   </clr-vertical-nav-group>
   <clr-vertical-nav-group routerLinkActive="active">
