schuetze und contest

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -27,9 +27,9 @@
     <clr-vertical-nav-group-children>
       <a
       clrVerticalNavLink
-      routerLink="./schuetze/contest/new"
+      routerLink="./schuetze/overview"
       routerLinkActive="active"
-      >Wettkämpfe</a
+      >Übersicht</a
     >
     </clr-vertical-nav-group-children>
   </clr-vertical-nav-group>
