--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <clr-vertical-nav [clrVerticalNavCollapsible]="true">
   <clr-vertical-nav-group routerLinkActive="active">
     <cds-icon shape="user" clrVerticalNavIcon></cds-icon>
-    Kunden
+    Personen
     <clr-vertical-nav-group-children>
       <ng-container *ngIf="featureFlags.navigation.showCustomerOverview">
         <a
@@ -11,14 +11,14 @@
           >{{'customerOverview' | translate}}</a
         >
       </ng-container>
-      <ng-container *ngIf="featureFlags.navigation.showNewInvoice">
+      <!-- <ng-container *ngIf="featureFlags.navigation.showNewInvoice">
         <a
           clrVerticalNavLink
           routerLink="./om/invoice/new"
           routerLinkActive="active"
           >Neue Rechnung</a
         >
-      </ng-container>
+      </ng-container> -->
     </clr-vertical-nav-group-children>
   </clr-vertical-nav-group>
   <clr-vertical-nav-group routerLinkActive="active">
@@ -33,27 +33,6 @@
     >
     </clr-vertical-nav-group-children>
   </clr-vertical-nav-group>
-  <clr-vertical-nav-group routerLinkActive="active">
-    <cds-icon shape="bolt" clrVerticalNavIcon></cds-icon>
-    Electric
-    <clr-vertical-nav-group-children>
-      <a
-        clrVerticalNavLink
-        routerLink="./electric/pikachu"
-        routerLinkActive="active"
-        >Pikachu</a
-      >
-      <a
-        clrVerticalNavLink
-        routerLink="./electric/raichu"
-        routerLinkActive="active"
-        >Raichu</a
-      >
-    </clr-vertical-nav-group-children>
-  </clr-vertical-nav-group>
-  <a clrVerticalNavLink routerLinkActive="active" routerLink="./credit">
-    <cds-icon shape="certificate" clrVerticalNavIcon></cds-icon>
-    Credit
-  </a>
+
 </clr-vertical-nav>
 <div class="content-area"><router-outlet /></div>
